--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>Mutal Funds</title>
 </head>
 <body class="page">
-	<div class="degubGrid">
+	<!-- <div class="degubGrid">
 		<div>
 		    <div>
 		        <div></div>
@@ -29,7 +29,7 @@
 		        <div></div>
 		    </div>
 		</div>
-	</div>
+	</div> -->
 	<div class="page__hero hero">
 		<div class="hero__header">
 			<div class="hero__sub">
